--- a/GuessingGame/Base.lproj/Main.storyboard
+++ b/GuessingGame/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,92 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GuessingGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fEb-cU-Fz9">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.084710400279789044" green="1" blue="0.85915482667245902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="riX-cv-RhX">
+                                <rect key="frame" x="10" y="44" width="394" height="818"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Tmj-D9-2BW">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="409"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guessing Game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0E8-CT-RS2">
+                                                <rect key="frame" x="0.0" y="0.0" width="394" height="48"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What is X?" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LOO-P7-UG4">
+                                                <rect key="frame" x="0.0" y="63" width="394" height="178.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Guesses left: 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLC-sj-HIK">
+                                                <rect key="frame" x="0.0" y="256.5" width="394" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Next guess" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Az9-r4-lcY">
+                                                <rect key="frame" x="0.0" y="300.5" width="394" height="45.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sbo-dO-oVP">
+                                                <rect key="frame" x="0.0" y="361" width="394" height="48"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="Enter"/>
+                                                <connections>
+                                                    <action selector="submitPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xYk-HB-lDZ"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Sbo-dO-oVP" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="BUP-mZ-rsi"/>
+                                            <constraint firstItem="nLC-sj-HIK" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="XGO-uc-ueR"/>
+                                            <constraint firstAttribute="trailing" secondItem="Sbo-dO-oVP" secondAttribute="trailing" id="eFl-3Y-lEK"/>
+                                            <constraint firstItem="Sbo-dO-oVP" firstAttribute="leading" secondItem="Tmj-D9-2BW" secondAttribute="leading" id="emW-h6-Yi0"/>
+                                            <constraint firstItem="LOO-P7-UG4" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="jGO-Dx-QUk"/>
+                                            <constraint firstItem="Az9-r4-lcY" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="oO4-NU-lRt"/>
+                                            <constraint firstItem="0E8-CT-RS2" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="w5F-1q-pkY"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fn6-mL-C4u">
+                                        <rect key="frame" x="0.0" y="409" width="394" height="409"/>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fEb-cU-Fz9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0zm-Yj-EXo"/>
+                            <constraint firstItem="riX-cv-RhX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4bx-U5-P2G"/>
+                            <constraint firstAttribute="trailing" secondItem="fEb-cU-Fz9" secondAttribute="trailing" id="9Iy-yN-zYG"/>
+                            <constraint firstItem="fEb-cU-Fz9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ds7-ih-0u1"/>
+                            <constraint firstItem="riX-cv-RhX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="P5m-xN-vnM"/>
+                            <constraint firstAttribute="bottom" secondItem="fEb-cU-Fz9" secondAttribute="bottom" id="RhA-sH-5MC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="riX-cv-RhX" secondAttribute="bottom" id="d4T-cS-7wC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="riX-cv-RhX" secondAttribute="trailing" constant="10" id="wdB-PE-90f"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="gameName" destination="0E8-CT-RS2" id="Lsq-kl-IpO"/>
+                        <outlet property="guessCountLabel" destination="nLC-sj-HIK" id="7Cg-pG-KSj"/>
+                        <outlet property="nextGuessText" destination="Az9-r4-lcY" id="Rmi-4n-mG0"/>
+                        <outlet property="submitButton" destination="Sbo-dO-oVP" id="Cue-iX-Hm6"/>
+                        <outlet property="topText" destination="LOO-P7-UG4" id="3kk-qu-705"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="139"/>
         </scene>
     </scenes>
 </document>
