--- a/GuessingGame/Base.lproj/Main.storyboard
+++ b/GuessingGame/Base.lproj/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,75 +17,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fEb-cU-Fz9">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hMd-NQ-3Qc">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" red="0.084710400279789044" green="1" blue="0.85915482667245902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="riX-cv-RhX">
-                                <rect key="frame" x="10" y="44" width="394" height="818"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Tmj-D9-2BW">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="409"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guessing Game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0E8-CT-RS2">
-                                                <rect key="frame" x="0.0" y="0.0" width="394" height="48"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What is X?" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LOO-P7-UG4">
-                                                <rect key="frame" x="0.0" y="63" width="394" height="178.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Guesses left: 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLC-sj-HIK">
-                                                <rect key="frame" x="0.0" y="256.5" width="394" height="29"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Next guess" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Az9-r4-lcY">
-                                                <rect key="frame" x="0.0" y="300.5" width="394" height="45.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                            </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sbo-dO-oVP">
-                                                <rect key="frame" x="0.0" y="361" width="394" height="48"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <state key="normal" title="Enter"/>
-                                                <connections>
-                                                    <action selector="submitPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xYk-HB-lDZ"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="Sbo-dO-oVP" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="BUP-mZ-rsi"/>
-                                            <constraint firstItem="nLC-sj-HIK" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="XGO-uc-ueR"/>
-                                            <constraint firstAttribute="trailing" secondItem="Sbo-dO-oVP" secondAttribute="trailing" id="eFl-3Y-lEK"/>
-                                            <constraint firstItem="Sbo-dO-oVP" firstAttribute="leading" secondItem="Tmj-D9-2BW" secondAttribute="leading" id="emW-h6-Yi0"/>
-                                            <constraint firstItem="LOO-P7-UG4" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="jGO-Dx-QUk"/>
-                                            <constraint firstItem="Az9-r4-lcY" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="oO4-NU-lRt"/>
-                                            <constraint firstItem="0E8-CT-RS2" firstAttribute="centerX" secondItem="Tmj-D9-2BW" secondAttribute="centerX" id="w5F-1q-pkY"/>
-                                        </constraints>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fn6-mL-C4u">
-                                        <rect key="frame" x="0.0" y="409" width="394" height="409"/>
-                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guessing Game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0E8-CT-RS2">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="163"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What is X?" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LOO-P7-UG4">
+                                        <rect key="frame" x="0.0" y="183" width="414" height="163.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guesses left: 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLC-sj-HIK">
+                                        <rect key="frame" x="0.0" y="366.5" width="414" height="163"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Next guess" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Az9-r4-lcY">
+                                        <rect key="frame" x="0.0" y="549.5" width="414" height="163.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sbo-dO-oVP">
+                                        <rect key="frame" x="0.0" y="733" width="414" height="163"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Enter"/>
+                                        <connections>
+                                            <action selector="submitPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xYk-HB-lDZ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="fEb-cU-Fz9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0zm-Yj-EXo"/>
-                            <constraint firstItem="riX-cv-RhX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4bx-U5-P2G"/>
-                            <constraint firstAttribute="trailing" secondItem="fEb-cU-Fz9" secondAttribute="trailing" id="9Iy-yN-zYG"/>
-                            <constraint firstItem="fEb-cU-Fz9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ds7-ih-0u1"/>
-                            <constraint firstItem="riX-cv-RhX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="P5m-xN-vnM"/>
-                            <constraint firstAttribute="bottom" secondItem="fEb-cU-Fz9" secondAttribute="bottom" id="RhA-sH-5MC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="riX-cv-RhX" secondAttribute="bottom" id="d4T-cS-7wC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="riX-cv-RhX" secondAttribute="trailing" constant="10" id="wdB-PE-90f"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hMd-NQ-3Qc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6rc-Dw-1t4"/>
+                            <constraint firstAttribute="trailing" secondItem="hMd-NQ-3Qc" secondAttribute="trailing" id="Gvw-2c-rdH"/>
+                            <constraint firstItem="hMd-NQ-3Qc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jrP-hS-eMR"/>
+                            <constraint firstAttribute="bottom" secondItem="hMd-NQ-3Qc" secondAttribute="bottom" id="qLd-kQ-SLY"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="gameName" destination="0E8-CT-RS2" id="Lsq-kl-IpO"/>
@@ -95,7 +72,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="139"/>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
